--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "main": "js/main.js",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "cheerio": "^0.19.0",
+    "json-loader": "^0.5.2"
+  }
 }
